fix the spacing in the typing indicator

--- a/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
@@ -110,15 +110,11 @@
   [dir="rtl"] & {
     text-align: right;
   }
-
-  &:before {
-    content: "\00a0"; // non-breaking space
-  }
 }
 
 .spacer {
   &:before {
-    content: none;
+    content: "\00a0"; // non-breaking space
   }
 }
 
